added a few sentences

--- a/main.ipynb
+++ b/main.ipynb
@@ -26,6 +26,8 @@
     "\n",
     "We start with all the data given from the dataset. The raw dataset has 1470 rows and 35 features including Attrition, which is our desired output feature. In terms of data types, there are 26 numerical features and 9 categorical features, ranging from 2 to 6 categories each.\n",
     "\n",
+    "Because we are working with employee attrition rate, there is a significant imbalance in our data. Roughly 83% of the data answered 'no' in attrition. This is our main challenge in developing the model. We need to use what we learned to account for the biased dataset. As an overview, we used SMOTE to oversample the minority class, and used ROC AUC as our main evaluation of the models robustness.\n",
+    "\n",
     "The Parse function below takes in a .CSV file, and does the following things:\n",
     "1. drop the constant features (columns_to_drop_1)\n",
     "2. drop the redundant features (columns_to_drop_2)\n",
