minor edits to explanation

--- a/main.ipynb
+++ b/main.ipynb
@@ -29,7 +29,9 @@
    "source": [
     "## Data Parsing\n",
     "\n",
-    "We start with all the data given from the dataset. The raw dataset has 1470 rows and 35 features including Attrition, which is our desired output feature. In terms of data types, there are 26 numerical features and 9 categorical features, ranging from 2 to 6 categories each."
+    "We start with all the data given from the dataset. The raw dataset has 1470 rows and 35 features including Attrition, which is our desired output feature. In terms of data types, there are 26 numerical features and 9 categorical features, ranging from 2 to 6 categories each.\n",
+    "\n",
+    "One challenge for our particular dataset is the significant imbalance of the dataset. There are ~83% 'no' responses to attrition, which means we need to employ different techniques to resolve this issue. Namely, we used SMOTE to oversample the minority class, and used ROC AUC to evaluate our model's performance, which is a better metric than accuracy when the dataset is skewed."
    ]
   },
   {
